--- a/agora-angular/src/app/product-list/product-card/product-card.component.scss
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.scss
@@ -32,6 +32,9 @@ $card-product-height: 28rem;
     bottom: 0;
     width: 92.7%;
 }
+.badge{
+    border-radius: .2rem;
+}
 // .side-scroll{
 //     display: inline-block;
 //     vertical-align: top;
