--- a/agora-angular/src/app/cart/cart.component.html
+++ b/agora-angular/src/app/cart/cart.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="shadow rounded p-3 m-2 col-12 col-lg-8">
             <div class="mx-5">
-                <div *ngFor="let product of productListShort" class="border-bottom">
+                <!-- <div *ngFor="let product of productListShort" class="border-bottom">
                     <div class="row p-2 pb-0 mt-2">
                         <div class="col-4 col-lg-2">
                             <img src="{{product.imgUrl[0]}}" alt="" class="img img-fluid rounded">
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="shadow rounded p-4 m-2 col-12 col-lg-3">
