--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -1,5 +1,6 @@
 <div class="container shadow rounded p-3">
-    <h2 class="text-center">Új termék felvétele</h2>
+    <h2 *ngIf="params.edit == 'false'" class="text-center">Új termék felvétele</h2>
+    <h2 *ngIf="params.edit == 'true'" class="text-center">Termék szerkesztése</h2>
     <div class="row">
         <div class="col-12 col-md-7 p-3 ps-3">
             <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
@@ -128,9 +129,12 @@
                     <label for="description" class="form-label mb-1">Leírás</label>
                     <textarea name="description" id="description" cols="30" rows="5" class="form-control" formControlName="description"></textarea>
                 </div>
-                <div class="mb-3">
+                <div *ngIf="params.edit == 'false'" class="mb-3">
                     <button type="submit" class="btn btn-secondary p-2 m-2">Mentés</button>
                     <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Közzététel</button>
+                </div>
+                <div *ngIf="params.edit == 'true'" class="mb-3">
+                    <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Változtatások közzététele</button>
                 </div>
             </form>
         </div>
